tests/ui/span/issue-24356.stderr
error[E0046]: not all trait items implemented, missing: `Target`
  --> $DIR/issue-24356.rs:18:9
   |
LL |         impl Deref for Thing {
   |         ^^^^^^^^^^^^^^^^^^^^ missing `Target` in implementation
   |
   = help: implement the missing item: `type Target = /* Type */;`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0046`.
